dev/test_programs/INVALID/group1/stmt18.go
package main;

func main(){
	var b bool;
	var x int;
	switch b{
		case true:
			x = 4;
		default:
			x = 3;
		default:
			x = 2;
	};
}
